# ALILQGames

./: .gitignore  CMakeLists.txt  README.md
examples/: 3AgentALILQGameRHGoalChange.cpp  3Player3DModelDiffDriveImguiALILQGameReceding.cpp  3PlayerDiffDriveImguiALILQGame.cpp  3PlayerDiffDriveImguiALILQGameReceding.cpp  5Player3DModelDiffDriveImguiALILQGameReceding.cpp  5PlayerDiffDriveImguiALILQGameReceding.cpp  CMakeLists.txt  DiffDriveFeedbackLin_imgui_ALILQGame.cpp  DiffDrive_imgui.cpp  DiffDrive_imgui_ALILQGame.cpp  DiffDrive_imgui_ILQGame.cpp  DiffDrive_imgui_receeding_horizon.cpp  homicidal_chauffeur.cpp  main.cpp  matplotlibcpp.h  mattplotlib.txt  pointmassEx.cpp  pointmass_imgui.cpp
include/ALILQGames/: AL.h  ALILQGames.h  BoxConstraint.h  CollisionConstraint2D.h  CollisionCost2D.h  DiffDrive4dFeedbackLinearization.h  DiffDrive4dFeedbackLinearized.h  FeedbackLinearization.h  FeedbackLinearizedModel.h  GlobalConstraints.h  GlobalIneqConstraints.h  ILQGames.h  NPlayerModel.h  NPlayerSystem.h  OracleParams.h  ReceedingHorizonImGui.h  Solver.h  SolverParams.h  Timer.h  TrajImGui.h  UseImGui.h  constraints.h  cost.h  costDiffDrive.h  costTVDiffDrive.h  diffdrive3d.h  diffdrive4d.h  model.h  pointmass.h  utils.h
src/: AL.cpp  ALILQGames.cpp  CMakeLists.txt  ILQGames.cpp  NPlayerModel.cpp  UseImGui.cpp
tests/: CMakeLists.txt
thirdpartylibs/: CMakeLists.txt
thirdpartylibs/glad/: CMakeLists.txt
thirdpartylibs/glad/include/: glad.h
thirdpartylibs/glad/src/: glad.c
thirdpartylibs/imgui/: CMakeLists.txt
